--- a/static/style.css
+++ b/static/style.css
@@ -11,151 +11,114 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
 }
-nav{
-  height: 0px;
-  margin: 0px;
-  padding: 0px;
-  line-height: 0px;
-  display: none;
-z-index: 1;
-}
-
-@keyframes show{
-  0%{
-    opacity: 0;
-    display: none;
-    line-height: 0px;
-    height: 0px;
-    padding: 0px;
-    margin: auto;
-  }
-  25%{
-    background: rgb(0, 0, 121);
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    opacity: 0;
-    line-height: 0px;
-    height: 0px;
-    display: none;
-    padding: 0px;
-    margin:auto;
-  }
-  100%{
-    opacity: 1;
-    background: rgb(0,0,121);
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-    line-height: auto;
-    height: 10vh;
-    display: flex;
-    padding: auto;
-    margin: auto;
-  }
-}
-.navbar-hidden{
-  animation-name:show ;
-  animation-duration: 1s;
-animation-fill-mode: backwards;
-  margin-top: -10vh;
-  height: 10vh;
-  animation-play-state: paused;
-  display: none;
-}
-.sticky{
-  height: 10vh;
+section {
+  height: 100vh;
   width: 100%;
-  margin: auto;
-  color: black;
-  background: transparent;
- animation-name: show;
- animation-duration: 1s;
-
-  display: flex;
-  
-  background: rgb(0, 0, 121);
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-  position: sticky;
-  top: 0;
-  align-items: center;
 }
-ul{
-align-items: center;
-display: flex;
-height: 100%;
-width: 70%;
-margin: auto;
-justify-content: space-around;
-align-items: center;
-list-style: none;
-}
-li{
-  flex: 1;
-  color: white;
-  text-align: center;
-}
-section.home {
+section#home {
   background-image: url("./anastasia-nero-_WxmxTqlXw4-unsplash.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  height: 100vh;
-  overflow: hidden;
-  width: 100%;
 }
+
 .profile-image {
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  border: 2px blue solid;
-  margin: 20px 20px;
-  transform: rotate(-15deg);
-  box-shadow: 5px 5px 5px black;
-}
-.name-logo {
-  height: 80%;
-  width: auto;
+  height: 70vh;
+  position: absolute;
   bottom: 0;
-  overflow: hidden;
-  position: absolute;
-  left:5%;
+  border: 2px rgb(0, 0, 168) solid;
+  left: 50%;
+  border-top-left-radius: 50%;
+  border-top-right-radius:50%;
+  transition-duration: 1s;
+  box-shadow: 10px 10px 20px black;
+  transform: translateX( -50%);
+  transition-timing-function: ease-in-out;
 }
-.name-txt {
-  font-size: 60px;
+.profile_image {
+  height: 70vh;
   position: absolute;
-  right: 5%;
-  top: 40%;
-  color: black;
+  top: 50%;
+  transition-duration: 1s;
+  border: 2px rgb(0, 0, 168) solid;
+  left: 50%;
+  border-radius: 50%;
+  transition-timing-function: ease-in-out;
+  transform: translate( -50%,-50%);
+  box-shadow: 10px 10px 20px black;
+}
+.name {
+  position: absolute;
+  left: 5%;
+  top: 30%;
+  font-size: 50px;
+  transform: translateY(-50%);
 }
 .hero {
-  font-size: 31px;
   position: absolute;
-  right: 5%;
-  top: 60%;
-  color: rgb(255, 255, 255);
+  left: 5%;
+  top: 75%;
+  color: black;
+  font-weight: bolder;
+  font-size: 30px;
+  transform: translateY(-50%);
 }
-button {
-  background: rgb(0, 0, 129);
-  position: absolute;
-  right: 10%;
-  top: 80%;
-  height: 40px;
-  width: 200px;
+.sticky {
+  position: sticky;
+  top: 5vh;
+  margin-top: -10vh;
+  z-index: 1;
+  left: 5vw;
+  display: flex;
+  height: 10vh;
+  width: 100%;
+  align-items: center;
+}
+.menu {
   cursor: pointer;
-  border: none;
-  color: white;
-  animation-fill-mode: both;
-  font-size: 20px;
+  width: 150px;
+}
+#menu {
+  margin: 10px auto;
+  width: 40px;
   transition-duration: 0.5s;
+  height: 3px;
+  color: black;
+}
+#cross1 {
+  transform: rotate(45deg);
+  transition-duration: 0.5s;
+  transform-origin: -55%;
+  width: 40px;
+  height: 3px;
+  margin-top: -17px;
+  margin-left: 5vh;
+  color: black;
+}
+#cross2 {
+  margin: 10px auto;
+  transform: rotate(135deg);
+  transform-origin: 30%;
+  width: 40px;
+  margin-left: 5vh;
+  transition-duration: 0.5s;
+  height: 3px;
+  color: black;
+}
+ul {
+  display: flex;
+  list-style: none;
 }
 a {
   text-decoration: none;
+  padding: 10px 25px;
+  color: black;
+}
+a:hover {
   color: white;
 }
-button:hover {
-  box-shadow: rgb(161, 161, 161) 2px 2px 5px;
-}
-section.about{
-  height: 100vh;
-  width: 100%;
-  background-color: #0cbaba;
-  background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
-  ;
+.absolute {
+  position: absolute;
+  top: 5vh;
+  
 }
