--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Goldman', cursive;
   color: white;
 }
 section {
@@ -57,7 +56,7 @@ section#home {
 .hero {
   position: absolute;
   left: 5%;
-  top: 75%;
+  top: 65%;
   color: black;
   font-weight: bolder;
   font-size: 30px;
@@ -92,7 +91,7 @@ section#home {
   width: 40px;
   height: 3px;
   margin-top: -17px;
-  margin-left: 5vh;
+  margin-left: 10vh;
   color: black;
 }
 #cross2 {
@@ -100,7 +99,7 @@ section#home {
   transform: rotate(135deg);
   transform-origin: 30%;
   width: 40px;
-  margin-left: 5vh;
+  margin-left: 10vh;
   transition-duration: 0.5s;
   height: 3px;
   color: black;
@@ -116,9 +115,16 @@ a {
 }
 a:hover {
   color: white;
+  transition-duration: 0.5s;
+}
+a:focus{
+  color: white;
 }
 .absolute {
   position: absolute;
-  top: 5vh;
+  top: 5px;
+  opacity: 0;
+  left: 5px;
   
+  z-index: -1;
 }
