--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: 'Goldman', cursive;
+  font-family: "Goldman", cursive;
   color: white;
 }
 section {
@@ -20,7 +20,13 @@ section#home {
   background-attachment: fixed;
   background-size: cover;
 }
-
+.profile_image::before {
+  content: "";
+  border: 3px solid blue;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+}
 .profile-image {
   height: 70vh;
   position: absolute;
@@ -28,10 +34,10 @@ section#home {
   border: 2px rgb(0, 0, 168) solid;
   left: 50%;
   border-top-left-radius: 50%;
-  border-top-right-radius:50%;
+  border-top-right-radius: 50%;
   transition-duration: 1s;
   box-shadow: 10px 10px 20px black;
-  transform: translateX( -50%);
+  transform: translateX(-50%);
   transition-timing-function: ease-in-out;
 }
 .profile_image {
@@ -43,7 +49,7 @@ section#home {
   left: 50%;
   border-radius: 50%;
   transition-timing-function: ease-in-out;
-  transform: translate( -50%,-50%);
+  transform: translate(-50%, -50%);
   box-shadow: 10px 10px 20px black;
 }
 .name {
@@ -117,7 +123,7 @@ a:hover {
   color: white;
   transition-duration: 0.5s;
 }
-a:focus{
+a:focus {
   color: white;
 }
 .absolute {
@@ -127,10 +133,40 @@ a:focus{
   left: 5px;
   z-index: -1;
 }
-#about{
+@keyframes show {
+  0% {
+    width: 0px;
+    opacity: 0;
+    letter-spacing: 0px;
+    margin: 0;
+    padding: 0;
+    word-spacing: 0px;
+  }
+  50% {
+    width: 0px;
+    padding: 5px 12.5px;
+    opacity: 1;
+    letter-spacing: 0px;
+    word-spacing: 0px;
+  }
+  75% {
+    padding: 10px 25px;
+  }
+}
+.home,
+.about,
+.skills,
+.projects,
+.contact {
+  transition-duration: 0.5s;
+  transition-delay: 0.5s;
+  transition-timing-function: ease-out;
+}
+#about {
   background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
-  padding: 30px;}
-.about-info{
+  padding: 30px;
+}
+.about-info {
   font-size: 300px;
   opacity: 0.2;
   position: absolute;
@@ -138,25 +174,50 @@ a:focus{
   left: 10%;
   transform: translateY(-50%);
 }
-.about-me{
+.about-me {
   position: absolute;
   top: 120vh;
-  font-size: 40px;
+  font-size: 30px;
   color: black;
   word-spacing: 5px;
   line-height: 50px;
 }
-.programmer{
+.programmer {
   color: rgb(150, 9, 9);
 }
-.skills-info{
+.skills-info {
   font-size: 300px;
-  opacity: 0.1;
+  opacity: 0.2;
   position: absolute;
   top: 230vh;
   left: 10%;
+
   transform: translateY(-50%);
 }
-#skills{
-  background-image: linear-gradient(to top,#330867  0%,#30cfd0  100%);
+#skills {
+  background-image: linear-gradient(to top, #330867 0%, #30cfd0 100%);
+  display: flex;
+}
+.box-html,
+.box-javascript,
+.box-django,
+.box-css {
+  height: 60vh;
+  width: 300px;
+  box-shadow: 20px 20px 20px rgb(0, 0, 0);
+  position: relative;
+  left: -10vw;
+  top: 20%;
+  transform: translatex(50%);
+  margin: 25px;
+  background: rgb(0, 0, 0);
+}
+.js-ring {
+  height: 168px;
+  margin-left: 60px;
+  margin-top: 20px;
+}
+.lang-html {
+  margin-top: -95px;
+  margin-left: 120px;
 }
