--- a/static/style.css
+++ b/static/style.css
@@ -74,7 +74,6 @@ section#home {
   margin-top: -10vh;
   z-index: 1;
   left: 5vw;
-  background: aqua;
   display: flex;
   height: 10vh;
   width: 100%;
@@ -123,6 +122,7 @@ a {
 a:hover {
   color: white;
   transition-duration: 0.5s;
+  
 }
 a:focus {
   color: white;
@@ -232,14 +232,42 @@ a:focus {
   align-items: center;
 }
 .project-box {
-  height: 80%;
-  width: 80%;
+  height: 70%;
+  width: 70%;
 }
 .project-image {
-  height: 100%;
-  width: 100%;
+  height: 60%;
+  width: 60%;
+ top: 340vh;
+  position: absolute;
+  right: 0;
+  opacity: 0.7;
 }
 #contact {
   background-image: linear-gradient(to top, #330867 0%, #30cfd0 100%);
 }
 
+.project-info {
+  font-size: 250px;
+  opacity: 0.3;
+  position: absolute;
+  top: 340vh;
+  left: 10%;
+  transform: translateY(-50%);
+}
+.contact-info {
+  font-size: 300px;
+  opacity: 0.3;
+  position: absolute;
+  top: 440vh;
+left: 5%;
+transform: translateY(-50%);
+}
+.project-text{
+  position: absolute;
+  top: 325vh;
+  left: 2%;
+  height: 40vh;
+  width: 40vw;
+
+}
