--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,3 +13,54 @@
   }
 }
 
+.top{
+  width: 100%;
+}
+  .map{
+    height: 40vh;
+    width: 80vw;
+    max-width: 600px;
+  }
+  .bottom{
+    height: 40vh;
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 10%;
+  }
+  .left{
+    width: 50%;
+    text-align: center;
+    float: left;
+  }
+  .right{
+    width: 50%;
+    text-align: center;
+    float: right;
+
+}
+@media (max-width:432px){
+  .map{
+    height: 40vh;
+    width: 60%;
+  }
+  .bottom{
+    height: 40vh;
+    width: 100%;
+    padding: 10%;
+  }
+  .left{
+    width: 100%;
+    text-align: center;
+  }
+  .right{
+    text-align: center;
+    width: 100%
+  }
+}
+.link{
+  color: black;
+}
+.link:hover{
+  color: white;
+  text-decoration: none;
+}
